--- a/config.ini
+++ b/config.ini
@@ -5,5 +5,6 @@ mysql_port = 3306;
 mysql_database = "oldTWC";
 mysql_username = "root";
 mysql_password = "password";
-[clans]
-clanadmin_hash = "SomeRandomLetters3532";
+[discord]
+discord_ooc_hook = "discord url hook";
+discord_event_hook = "discord url hook";
