--- a/config.ini
+++ b/config.ini
@@ -8,3 +8,5 @@ mysql_password = "password";
 [discord]
 discord_ooc_hook = "discord url hook";
 discord_event_hook = "discord url hook";
+discord_bot_url = "";
+discord_bot_pass = "";
